spec/e2e/variable/use_false_as_var.lit
# error: [line 2] Syntax error at "false": I was expecting a variable name here.
var false = "value"
